<resources>
    <string name="app_name">یاراتیوب</string>
    <string name="profile">پروفایل</string>
    <string name="about">درباره ما</string>
    <string name="contact">ارتباط با ما</string>
    <string name="nav_header_desc">navigation header description</string>
    <string name="user_name">نام کاربر</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="category">دسته بندی ها</string>
    <string name="home">صفحه اصلی</string>
    <string name="about_developer">درباره ما</string>
    <string name="about_developer_desc"> نرگس صادقی \n کارآموز برنامه نویسی اندروید شرکت یارا \n تابستان ۱۳۹۷</string>

    <string name="contact_developer">ارتباط با ما</string>
    <string name="developer_github">https://github.com/NaarGes</string>
    <string name="developer_email">mailto:nargessadeghi@ut.ac.ir?subject=Contact%20to%20Yaratube%20developer\</string>
    <string name="developer_linkedin">https://www.linkedin.com//in/nargessadeghi</string>
    <string name="developer_telegram">https://t.me/NnargessS</string>
    <string name="product_image">تصویر محصول</string>
    <string name="header_image">تصویر هدر</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">توضیحات</string>
    <string name="users_comments">نظرات کاربران</string>
    <string name="comment">نظر دهید</string>
    <string name="login">ورود</string>
    <string name="phone_method">از طریق شماره موبایل</string>
    <string name="google_method">از طریق حساب گوگل</string>
    <string name="show_name">نام نمایشی</string>
    <string name="first_last_name">نام و نام خانوادگی</string>
    <string name="sex">جنسیت</string>
    <string name="male">مرد</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="default_date">1397/1/1</string>
    <string name="submit_changes">ثبت تغییرات</string>
    <string name="cancel">انصراف</string>
    <string name="logout">خروج از برنامه</string>
    <string name="mobile_login_method">ورود از طریق شماره موبایل</string>
    <string name="enter_mobile">شماره موبایل خود را وارد کنید</string>
    <string name="submit">ثبت</string>
    <string name="enter_verification_code">کد فعال سازی را وارد کنید</string>
    <string name="verification_code">کد فعال سازی</string>
    <string name="dont_receive_code">کد را دریافت نکردید؟</string>
    <string name="edit_mobile">تصحیح شماره</string>
    <string name="Comment">نظر</string>
    <string name="more">بیشتر</string>
    <string name="choose_from_gallery">انتخاب تصویر از گالری</string>
    <string name="take_camera">گرفتن تصویر جدید</string>
    <string name="user_profile">پروفایل کاربر</string>
    <string name="no_internet_connection">لطفا اتصال به اینترنت را بررسی کنید</string>
    <string name="retry">تلاش مجدد</string>
    <string name="ok">بیخیال</string>

</resources>
