<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/padding_8dp"
    android:elevation="@dimen/_3dp"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:layout_margin="@dimen/padding_16dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code"
            android:textStyle="bold"
            android:textSize="@dimen/font_size_18sp"
            android:layout_margin="@dimen/padding_8dp"/>

        <EditText
            android:id="@+id/activation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:layout_margin="@dimen/padding_8dp"
            android:paddingStart="@dimen/padding_8dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dont_receive_code"
            android:layout_margin="@dimen/padding_8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <Button
                android:id="@+id/edit_phone_butt"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bordered_button"
                android:text="@string/edit_mobile"
                android:textColor="@color/colorPrimary"
                android:layout_margin="@dimen/padding_8dp" />

            <Button
                android:id="@+id/submit_code_butt"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:background="@drawable/filled_button"
                android:layout_margin="@dimen/padding_8dp" />

        </LinearLayout>
</LinearLayout>