<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/padding_8dp"
    android:elevation="@dimen/_3dp"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:layout_margin="@dimen/padding_16dp">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="@dimen/font_size_18sp"
            android:layout_margin="@dimen/padding_8dp"/>

        <Button
            android:id="@+id/phone_method_butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_method"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/padding_8dp"
            android:paddingStart="@dimen/padding_8dp"
            android:drawableStart="@drawable/ic_smartphone"/>

        <Button
            android:id="@+id/google_method_butt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_method"
            android:textColor="@color/white"
            android:background="#dd4b39"
            android:layout_margin="@dimen/padding_8dp"
            android:paddingStart="@dimen/padding_8dp"
            android:drawableStart="@drawable/ic_google_plus"/>

 </LinearLayout>